Changes to Corruousel

--- a/FireBaseProof/Podfile
+++ b/FireBaseProof/Podfile
@@ -13,4 +13,5 @@ target 'FireBaseProof' do
   pod 'FirebaseUI/Storage'
   pod 'Firebase/Firestore'
   pod 'Firebase/Storage'
+  pod 'iCarousel'
 end
