Operation db completed

--- a/VirtualCourses/Info.plist
+++ b/VirtualCourses/Info.plist
@@ -47,6 +47,8 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSFileProviderDomainUsageDescription</key>
+	<string>Please allow access to upload photos.</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
